catkin_ws/logs/backend/build.make.018.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:450:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void saveImage(SLAM::Frame, int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:100:23: error: ‘frames’ was not declared in this scope
 }
                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:100:30: error: ‘state’ was not declared in this scope
 }
                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:100:30: note: suggested alternative:
In file included from /usr/include/boost/thread.hpp:24:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frontend.h:13,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:12:
/usr/include/boost/thread/future.hpp:168:14: note:   ‘boost::future_state::state’
         enum state { uninitialized, waiting, ready, moved, deferred };
              ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
